--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^3.0.1
   page_transition: ^2.0.9
+  intl: ^0.18.0
 
 dev_dependencies:
   flutter_test:
